Drafted about and teaching.

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,23 @@ author_profile: true
 
 {% include base_path %}
 
+<h2>Lecturing and Coordination</h2>
+
+Since 2018, I am teaching the following bachelor courses at Campus Fryslân, University of Groningen:
+<ul>
+  <li><i>Introduction to Programming (also coordinator)</i></li>
+  <li><i>Introduction to Data Science (also coordinator)</i></li>
+  <li><i>Information Technology and its Implication (also coordinator)</i></li>
+  <li><i>Living Labs (supervisor)</i></li>
+</ul>
+
+<h2>Teaching Assistanship</h2>
+
+In the Faculty of Science and Engineering of the University of Groningen, I was TA for the master course <i>Software Patterns</i> between 2014 and 2016.
+Before that, between 2007 and 2012, I was TA at the Institute of Mathematics and Computational Sciences of the University of São Paulo for the bachelor courses: <i>Information systems</i>, <i>Analysis of object-oriented designs</i>, <i>Databases laboratory</i>, <i>Databases</i> and <i>Introduction to computer science</i>.
+
+<!--
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+-->
