Drafted cv and teaching.

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -11,10 +11,10 @@ author_profile: true
 
 Since 2018, I am teaching the following bachelor courses at Campus Fryslân, University of Groningen:
 <ul>
-  <li><i>Introduction to Programming (also coordinator)</i></li>
-  <li><i>Introduction to Data Science (also coordinator)</i></li>
-  <li><i>Information Technology and its Implication (also coordinator)</i></li>
-  <li><i>Living Labs (supervisor)</i></li>
+  <li><i>Introduction to Programming</i> (also coordinator)</li>
+  <li><i>Introduction to Data Science</i> (also coordinator)</li>
+  <li><i>Information Technology and its Implication</i> (also coordinator)</li>
+  <li><i>Living Labs</i> (supervisor)</li>
 </ul>
 
 <h2>Teaching Assistanship</h2>
