Side-wide content update.

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -9,12 +9,13 @@ author_profile: true
 
 <h2>Lecturing and Coordination</h2>
 
-Since 2018, I am teaching the following bachelor courses at Campus Fryslân, University of Groningen:
+From 2018 to 2021, I taught the following undergraduate courses at Campus Fryslân, University of Groningen:
 <ul>
   <li><i>Introduction to Programming</i> (also coordinator)</li>
   <li><i>Introduction to Data Science</i> (also coordinator)</li>
   <li><i>Information Technology and its Implication</i> (also coordinator)</li>
   <li><i>Living Labs</i> (supervisor)</li>
+  <li><i>Topics on Data Science</i> (also coordinator)</li>
 </ul>
 
 <h2>Teaching Assistanship</h2>
