--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -9,13 +9,22 @@ author_profile: true
 
 <h2>Lecturing and Coordination</h2>
 
-From 2018 to 2021, I taught the following undergraduate courses at Campus Fryslân, University of Groningen:
+Since 2021, I am (co-)teaching the following courses at the Faculty of Science and Engineering, University of Groningen:
 <ul>
-  <li><i>Introduction to Programming</i> (also coordinator)</li>
-  <li><i>Introduction to Data Science</i> (also coordinator)</li>
-  <li><i>Information Technology and its Implication</i> (also coordinator)</li>
-  <li><i>Living Labs</i> (supervisor)</li>
-  <li><i>Topics on Data Science</i> (also coordinator)</li>
+  <li>[MSc] <i>Software Architecture</i></li>
+  <li>[BSc] <i>Advanced Object-Oriented Programming</i> (also coordinator)</li>
+  <li>[BSc] <i>Algorithmic Programming Contests</i></li>
+  <li>[BSc] <i>Object-Oriented Programming</i></li>
+  <li>[BSc] <i>Problem Analysis and Software Design</i></li>
+</ul>
+
+From 2018 to 2021, I taught the following courses at Campus Fryslân, University of Groningen:
+<ul>
+  <li>[BSc] <i>Introduction to Programming</i> (also coordinator)</li>
+  <li>[BSc] <i>Introduction to Data Science</i> (also coordinator)</li>
+  <li>[BSc] <i>Information Technology and its Implication</i> (also coordinator)</li>
+  <li>[BSc] <i>Living Labs</i> (supervisor)</li>
+  <li>[BSc] <i>Topics on Data Science</i> (also coordinator)</li>
 </ul>
 
 <h2>Teaching Assistanship</h2>
