--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -9,22 +9,57 @@ author_profile: true
 
 <h2>Lecturing and Coordination</h2>
 
-Since 2021, I am (co-)teaching the following courses at the Faculty of Science and Engineering, University of Groningen:
+Since 2021, I (co-)teach courses at the Faculty of Science and Engineering, University of Groningen.
+Before that, from 2018 to 2021, I taught at Campus Fryslân, University of Groningen.
+
+<h3>2023-2024</h3>
+
 <ul>
   <li>[MSc] <i>Software Architecture</i></li>
   <li>[BSc] <i>Advanced Object-Oriented Programming</i> (also coordinator)</li>
+  <li>[BSc] <i>Problem Analysis and Software Design</i> (also coordinator)</li>
   <li>[BSc] <i>Algorithmic Programming Contests</i></li>
-  <li>[BSc] <i>Object-Oriented Programming</i></li>
-  <li>[BSc] <i>Problem Analysis and Software Design</i></li>
 </ul>
 
-From 2018 to 2021, I taught the following courses at Campus Fryslân, University of Groningen:
 <ul>
-  <li>[BSc] <i>Introduction to Programming</i> (also coordinator)</li>
-  <li>[BSc] <i>Introduction to Data Science</i> (also coordinator)</li>
-  <li>[BSc] <i>Information Technology and its Implication</i> (also coordinator)</li>
-  <li>[BSc] <i>Living Labs</i> (supervisor)</li>
-  <li>[BSc] <i>Topics on Data Science</i> (also coordinator)</li>
+  <li><strong>2022-2023</strong>
+    <ul>
+      <li>[MSc] <i>Software Architecture</i></li>
+      <li>[BSc] <i>Advanced Object-Oriented Programming</i> (also coordinator)</li>
+      <li>[BSc] <i>Algorithmic Programming Contests</i></li>
+      <li>[BSc] <i>Object-Oriented Programming</i></li>
+      <li>[BSc] <i>Problem Analysis and Software Design</i></li>
+    </ul>
+  </li>
+  <li><strong>2021-2022</strong>
+    <ul>
+      <li>[MSc] <i>Software Architecture</i></li>
+      <li>[BSc] <i>Object-Oriented Programming</i></li>
+      <li>[BSc] <i>Problem Analysis and Software Design</i></li>
+      <li>[BSc] <i>Introduction to Programming</i> (also coordinator)</li>
+    </ul>
+  </li>
+  <li><strong>2020-2021</strong>
+    <ul>
+      <li>[BSc] <i>Topics on Data Science</i> (also coordinator)</li>
+      <li>[BSc] <i>Information Technology and its Implication</i> (also coordinator)</li>
+      <li>[BSc] <i>Introduction to Programming</i> (also coordinator)</li>
+      <li>[BSc] <i>Living Labs</i> (supervisor)</li>
+    </ul>
+  </li>
+  <li><strong>2019-2020</strong>
+    <ul>
+      <li>[BSc] <i>Introduction to Programming</i> (also coordinator)</li>
+      <li>[BSc] <i>Introduction to Data Science</i> (also coordinator)</li>
+      <li>[BSc] <i>Living Labs</i> (supervisor)</li>
+    </ul>
+  </li>
+  <li><strong>2018-2019</strong>
+    <ul>
+      <li>[BSc] <i>Introduction to Programming</i> (also coordinator)</li>
+      <li>[BSc] <i>Introduction to Data Science</i> (also coordinator)</li>
+    </ul>
+  </li>
 </ul>
 
 <h2>Teaching Assistanship</h2>
